[package]
name = "gpx"
description = "Rust read/write support for GPS Exchange Format (GPX)"
license = "MIT"
version = "0.8.4"
authors = ["Brendan Ashworth <brendan.ashworth@me.com>", "Corey Farwell <coreyf@rwell.org>", "Felix Gruber <felgru@gmx.de>"]
readme = "README.md"
documentation = "https://docs.rs/gpx"
repository = "https://github.com/georust/gpx"
edition = "2018"

[features]
use-serde = [ "serde", "chrono/serde", "geo-types/serde" ]

[dependencies]
assert_approx_eq = "1"
chrono = "0.4"
error-chain = "0.12"
thiserror = "1.0"
geo-types = "0.7"
xml-rs = "0.8"
serde = { version = "1.0", features = [ "derive" ], optional = true }

[dev-dependencies]
geo = "0.18"
