[package]
name = "gpx"
description = "Rust read/write support for GPS Exchange Format (GPX)"
license = "MIT"
version = "0.9.1"
readme = "README.md"
documentation = "https://docs.rs/gpx"
repository = "https://github.com/georust/gpx"
edition = "2021"
rust-version = "1.67"

[package.metadata.docs.rs]
features = ["use-serde"]

[features]
use-serde = ["serde", "time/serde", "geo-types/serde"]

[dependencies]
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "1.0"
geo-types = "0.7.8"
xml-rs = "0.8.10"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
assert_approx_eq = "1"
geo = "0.26"
